--- a/web1/src/app/admin/employee/employee.component.css
+++ b/web1/src/app/admin/employee/employee.component.css
@@ -70,4 +70,14 @@
       width: 100px;
       height: 100px;
     }
+
+    .upload_icon {
+      font-size: 20px;
+      color: #ffffff;
+      background: #ff5100;
+      width: 101px;
+      padding-top: 2px;
+      height: 25px;
+      padding-left: 4px;
   }
+}
