--- a/web1/src/app/admin/shop-list/shop-list.component.html
+++ b/web1/src/app/admin/shop-list/shop-list.component.html
@@ -6,11 +6,11 @@
                     <div class="card p-0">
                         <div class="header p-2 py-0 pt-1">
                             <div class="row">
-                                <div class="col-md-1 col-8 p-0 ms-3">
+                                <div class="col-lg-1 col-md-2 col-6 p-0 ms-3">
                                     <h2>Shop List <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true"
                                             type="button" (click)="exportAsXLSX()"></i> </h2>
                                 </div>
-                                <div class="col-md-2 col-1 ps-md-0 ps-1">
+                                <div class="col-md-2 col-3 ps-md-0 ps-1 order-1 order-md-1">
                                     <select class=" form-control"
                                         style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
                                         [(ngModel)]="itemsPerPage" (change)="getList();">
@@ -22,20 +22,20 @@
                                         <option [ngValue]="500">Show 500 Row</option>
                                     </select>
                                 </div>
-                                <div class="col-md-3 col-4 mx-md-auto" style="margin-top:0px;">
+                                <div class="col-md-3 col-6 mx-md-auto order-2 order-md-1" style="margin-top:0px;">
                                     <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false"
                                         ngbPaginationEllipsis [collectionSize]="collectionSize" #numPages
                                         [pageSize]="itemsPerPage" [(page)]="currentPage" (pageChange)="getList()"
                                         [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
                                     </ngb-pagination>
                                 </div>
-                                <div class="col-md-2 col-4 ms-auto">
+                                <div class="col-md-2 col-5 ms-auto order-0 order-md-1">
                                     <div class="input-group">
                                         <input placeholder="Search" [(ngModel)]="term" #searching mdbInput type="search"
                                             id="form1" class="form-control" />
                                     </div>
                                 </div>
-                                <div class="col-md-1 col-1" style="width: 70px;padding: 0;">
+                                <div class="col-md-1 col-6 order-3 order-md-1 ms-3 ms-md-0" style="width: 70px;padding: 0;">
                                     <button class="bg-none" (click)="openModal(content)" *ngIf="addShopList === true">
                                         <mat-icon class="col-white plus_icon me-1" data-mdb-toggle="modal"
                                         data-mdb-target="#exampleModal" > add</mat-icon>
@@ -48,9 +48,9 @@
                             </div>
                         </div>
                         <!-- Grid View start -->
-                        <div class="row mt-2 p-2" *ngIf="dataList?.length !== 0 && !gridview"
+                        <div class="row mt-5 mt-md-2 p-2" *ngIf="dataList?.length !== 0 && !gridview"
                             style="overflow:auto;height:530px; ">
-                            <div class="col-md-3" *ngFor="let data of dataList let i = index;">
+                            <div class="col-lg-3 col-md-6" *ngFor="let data of dataList let i = index;">
                                 <div class="course-card" style="height: 28rem;">
                                     <div class="course-card-body">
                                         <div class="course-card-top-overflow text-white">
@@ -74,7 +74,7 @@
                         </div>
                         <!-- Grid View end -->
                         <!-- shop list start -->
-                        <div class="body mt-2 p-2">
+                        <div class="body mt-md-1 mt-5 p-2">
                             <div class="row" *ngIf="gridview">
                                 <div class="col-sm-12" style="overflow: auto; height: 530px;">
                                     <div class="table-responsive">
@@ -289,31 +289,31 @@
             <!-- Bill Fromat Options -->
             <h2 class="header">Bill Format Hide/Show</h2>
             <div class="row ps-3">
-                <div class="col-md-1 col-sm-6 col-6 p-0">
+                <div class="col-lg-1 col-md-2 col-sm-6 col-6 p-0">
                     <mat-slide-toggle type="ratio"  name="HSNCode" color="primary" [(ngModel)]="data.HSNCode" class="example-margin">
                         HSN</mat-slide-toggle>
                 </div>
-                <div class="col-md-1 col-sm-6 col-6 p-0">
+                <div class="col-lg-1 col-md-2 col-sm-6 col-6 p-0">
                     <mat-slide-toggle type="ratio" name="CustGSTNo" color="primary" [(ngModel)]="data.CustGSTNo"
                         class="example-margin">GST</mat-slide-toggle>
                 </div>
-                <div class="col-md-1 col-sm-6 col-6 p-0">
+                <div class="col-lg-1 col-md-2 col-sm-6 col-6 p-0">
                     <mat-slide-toggle type="ratio" name="Rate" color="primary" [(ngModel)]="data.Rate" class="example-margin">Rate
                     </mat-slide-toggle>
                 </div>
-                <div class="col-md-1 col-sm-6 col-6 p-0">
+                <div class="col-lg-1 col-md-2 col-sm-6 col-6 p-0">
                     <mat-slide-toggle type="ratio" name="Discounts" color="primary" [(ngModel)]="data.Discounts"
                         class="example-margin">Dis </mat-slide-toggle>
                 </div>
-                <div class="col-md-1 col-sm-6 col-6 p-0">
+                <div class="col-lg-1 col-md-2 col-sm-6 col-6 p-0">
                     <mat-slide-toggle type="ratio" name="SubTotal" color="primary" [(ngModel)]="data.SubTotal"
                         class="example-margin">SubTotal </mat-slide-toggle>
                 </div>
-                <div class="col-md-1 col-sm-6 col-6 p-0">
+                <div class="col-lg-1 col-md-2 col-sm-6 col-6 p-0">
                     <mat-slide-toggle type="ratio" name="Tax" color="primary" [(ngModel)]="data.Tax" class="example-margin">Tax
                     </mat-slide-toggle>
                 </div>
-                <div class="col-md-1 col-sm-6 col-6 p-0">
+                <div class="col-lg-1 col-md-2 col-sm-6 col-6 p-0">
                     <mat-slide-toggle type="ratio" name="Total" color="primary" [(ngModel)]="data.Total" class="example-margin">Total
                     </mat-slide-toggle>
                 </div>
@@ -325,11 +325,11 @@
             <!-- Software Bill Options Hide/Show -->
             <h2 class="header mt-4">Software Bill Hide/Show</h2>
             <div class="row ps-3">
-                <div class="col-md-1 col-sm-6 col-6 p-0">
+                <div class="col-lg-1 col-md-2 col-sm-6 col-6 p-0">
                     <mat-slide-toggle type="ratio" name="Discount" color="primary" class="example-margin" [(ngModel)]="data.Discount"
-                        class="example-margin">Dis</mat-slide-toggle>
+                        class="example-margin">Discount</mat-slide-toggle>
                 </div>
-                <div class="col-md-1 col-sm-6 col-6 p-0">
+                <div class="col-lg-1 col-md-2 col-sm-6 col-6 p-0">
                     <mat-slide-toggle type="ratio" name="GSTnumber" color="primary" [(ngModel)]="data.GSTnumber"
                         class="example-margin">GST</mat-slide-toggle>
                 </div>
