--- a/web1/src/app/inventory/purchase-list/purchase-list.component.html
+++ b/web1/src/app/inventory/purchase-list/purchase-list.component.html
@@ -6,15 +6,15 @@
           <div class="card p-0">
             <div class="header p-2 py-0 pt-1">
               <!-- Purchase all Supplier Wise-->
-              <div *ngIf="this.id === '0'" class="row">
-                <div class="col-md-1 col-8 p-0 ms-3">
+              <div *ngIf="this.id === '0'" class="row mb-5">
+                <div class="col-lg-2 col-md-2 col-5 p-0 ms-3">
                   <h2>Purchase
                     <button class="bg-none" (click)="exportAsXLSX()">
                       <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"></i>
                     </button>
                   </h2>
                 </div>
-                <div class="col-md-2 col-1 ps-md-0 ps-1">
+                <div class="col-md-1 col-3 ps-md-0 ps-3 order-1 order-md-1">
                   <select class=" form-control"
                     style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
                     [(ngModel)]="itemsPerPage" (change)="getList();">
@@ -26,19 +26,19 @@
                     <option [ngValue]="500">Show 500 Row</option>
                   </select>
                 </div>
-                <div class="col-md-3 col-4 mx-md-auto" style="margin-top:0px;">
+                <div class="col-md-3 col-6 mx-md-auto order-2 order-md-1" style="margin-top:0px;">
                   <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false" ngbPaginationEllipsis
                     [collectionSize]="collectionSize" #numPages [pageSize]="itemsPerPage" [(page)]="currentPage"
                     (pageChange)="getList()" [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
                   </ngb-pagination>
                 </div>
-                <div class="col-md-2 col-4 ms-auto">
+                <div class="col-md-2 col-5 ms-auto order-0 order-md-1">
                   <div class="input-group">
                     <input placeholder="Search" [(ngModel)]="term" #searching mdbInput type="search" id="form1"
                       class="form-control" />
                   </div>
                 </div>
-                <div class="col-md-1 col-1" style="width: 40px;padding: 0;">
+                <div class="col-md-1 col-2 ms-auto order-3 order-md-1 ms-3 ms-md-0" style="width: 40px;padding: 0;">
                   <button *ngIf="addPurchaseList" class="bg-none" [routerLink]="['/inventory/purchase',0]">
                     <mat-icon class="col-white plus_icon me-1"> add</mat-icon>
                   </button>
@@ -84,8 +84,8 @@
             </div>
             <!-- purchase list start -->
             
-            <div class="body mt-md-2 mt-5 p-2">
-              <div class="row" *ngIf="gridview">
+            <div class="body mt-md-1 pt-3 mt-5 p-2">
+              <div class="row table-responsive" *ngIf="gridview">
                 <div class="col-sm-12" style="overflow: auto; height: 530px;">
                   <div *ngIf="this.dataList.length == 0" class="datanotFound" >Data Not Found</div>
                   <table *ngIf="this.dataList.length != 0"  class="table table-striped table-hover table-sm table-bordered"
