--- a/web1/src/app/product/add-manage/add-manage.component.html
+++ b/web1/src/app/product/add-manage/add-manage.component.html
@@ -14,7 +14,7 @@
                     <div class="body">
                         <form #f="ngForm" autocomplete="off">
                             <div class="row">
-                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
+                                <div class="col-xl-2 col-lg-2 col-md-4  col-12  mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Type</mat-label>
                                         <mat-select name="FieldType" [(ngModel)]="selectedProduct"
@@ -30,9 +30,9 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div *ngIf="showFeild" class="col-xl-4 col-lg-4 col-md-4 col-sm-2 mb-0">
+                                <div *ngIf="showFeild" class="col-xl-4 col-lg-4 col-md-7 col-sm-2 mb-0">
                                 <div class="row" >
-                                <div *ngIf="!showAdd" class="col-md-6 col-sm-12 mb-0">
+                                <div *ngIf="!showAdd" class="col-lg-6 col-md-6 col-8 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Category</mat-label>
                                         <mat-select name="Field Type" [(ngModel)]="data1.Category" required
@@ -47,12 +47,12 @@
                                         </mat-error> -->
                                     </mat-form-field>
                                 </div>
-                                <div *ngIf="!showAdd" class="col-md-6 col-sm-12 mb-0">
+                                <div *ngIf="!showAdd" class=" col-lg-6 col-md-6 col-4 mb-0">
                                    <button *ngIf="addAddManagement" type="button" autofocus class="btn_icon" (click)="showAdd = !showAdd;">
                                     <mat-icon class="col-white plus_icon" >add</mat-icon>
                                    </button>
                                    <button   type="button" autofocus class="btn_icon" *ngIf="showAdd === false"  (click)="delSupport()">
-                                    <mat-icon *ngIf="deleteAddManagement" class="delete_icon me-2 ms-2" 
+                                    <mat-icon *ngIf="deleteAddManagement" class="delete_icon me-2 " 
                                        >delete_forever</mat-icon>
                                    </button>
 
@@ -110,7 +110,7 @@
                                         <input matInput  name="Description"  [(ngModel)]="selectedRow.Description"  required #Descriptioncontrol  [disabled]="this.setValueDisbled" >
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                <div class="col-xl-1 col-lg-1 col-md-2 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0" >
                                         <mat-label>Customer Price</mat-label>
                                         <input matInput name="Price" type="number" min="0" [(ngModel)]="selectedRow.Price" required #Pricecontrol  [disabled]="this.setValueDisbled" >
@@ -119,7 +119,7 @@
                                             </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 ">
+                                <div class="col-xl-1 col-lg-1 col-md-1 col-6 mb-0 ">
                                     <mat-form-field class="example-full-width mb-0" >
                                         <mat-label>GST%</mat-label>
                                         <input matInput name="GSTPercentage" type="number" min="0" [(ngModel)]="selectedRow.GSTPercentage" (blur)="calculate('GSTPercentage', 'chgst')" required #GSTPercentagecontrol  [disabled]="this.setValueDisbled" >
@@ -129,7 +129,7 @@
                                     </mat-form-field>
                                     
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                <div class="col-xl-1 col-lg-1 col-md-1 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0" >
                                         <mat-label>GSTAmount</mat-label>
                                         <input matInput name="GSTAmount" type="number" min="0" [(ngModel)]="selectedRow.GSTAmount" (blur)="calculate('GSTAmount', 'chgst')" required #GSTAmountcontrol  [disabled]="this.setValueDisbled" >
@@ -138,7 +138,7 @@
                                             </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div *ngIf="selectedRow.GSTPercentage === 0" class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 p-0">
+                                <div *ngIf="selectedRow.GSTPercentage === 0" class="col-xl-1 col-lg-1 col-md-1 col-6 mb-0 p-md-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>GST Type</mat-label>
                                         <mat-select name="GSTType" [(ngModel)]="selectedRow.GSTType"  [required]="true" #GSTTypecontrol1  (blur)="calculate('Total', 'chtotal')" [disabled]="this.setValueDisbled" >
@@ -146,7 +146,7 @@
                                         </mat-select>
                                     </mat-form-field>
                                 </div>
-                                <div *ngIf="selectedRow.GSTPercentage !== 0" class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 p-0">
+                                <div *ngIf="selectedRow.GSTPercentage !== 0" class="col-xl-1 col-lg-1 col-md-1 col-6 mb-0 p-md-0 ">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>GST Type</mat-label>
                                         <mat-select name="GSTType" [(ngModel)]="selectedRow.GSTType"  [required]="true" #GSTTypecontrol1  (blur)="calculate('Total', 'chtotal')" [disabled]="this.setValueDisbled" >
@@ -154,7 +154,7 @@
                                         </mat-select>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                <div class="col-xl-1 col-lg-1 col-md-1 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0" >
                                         <mat-label>Total </mat-label>
                                         <input matInput name="Total" type="number" min="0" [(ngModel)]="selectedRow.TotalAmount" required #Totalcontrol  disabled>
@@ -163,12 +163,12 @@
                                             </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0" *ngIf="!showAddCharge">
+                                <div class="col-xl-1 col-lg-1 col-md-1 col-6 mb-0" *ngIf="!showAddCharge">
                                    <button  *ngIf="addChargeManagement" type="button" autofocus mat-raised-button color="primary" (click)="showAddCharge = !showAddCharge; resetData();">
                                      Add
                                    </button>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-2 mb-0" *ngIf="showAddCharge">
+                                <div class="col-xl-1 col-lg-1 col-md-1 col-6 mb-0" *ngIf="showAddCharge">
                                     <button  type="button" [disabled]="!f1.valid"  autofocus mat-raised-button color="primary" (click)="showAddCharge = !showAddCharge; chargesave(); ">
                                        save
                                     </button>
@@ -245,13 +245,13 @@
                                         <input matInput name="NewRole" [(ngModel)]="Service.Name"  required #NewProductTypecontrol>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
+                                <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0" >
                                         <mat-label>Description</mat-label>
                                         <input matInput name="Description" [(ngModel)]="Service.Description"  required #Descriptioncontrol  [disabled]="this.setValueServiceDisbled" >
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                <div class="col-xl-1 col-lg-1 col-md-1 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0" >
                                         <mat-label>Internal Cost</mat-label>
                                         <input matInput name="Cost" type="number" min="0" [(ngModel)]="Service.Cost" required #Costcontrol [disabled]="this.setValueServiceDisbled">
@@ -260,7 +260,7 @@
                                             </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                <div class="col-xl-1 col-lg-1 col-md-1 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0" >
                                         <mat-label>Customer Price</mat-label>
                                         <input matInput name="Price"  type="number" min="0" [(ngModel)]="Service.Price" required #Pricecontrol [disabled]="this.setValueServiceDisbled">
@@ -269,7 +269,7 @@
                                             </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 ">
+                                <div class="col-xl-1 col-lg-1 col-md-1 col-6 mb-0 ">
                                     <mat-form-field class="example-full-width mb-0" >
                                         <mat-label>GST%</mat-label>
                                         <input matInput name="GSTPercentage" type="number" min="0" [(ngModel)]="Service.GSTPercentage" (blur)="calculateSevice('GSTPercentage', 'chgst1')" required #GSTPercentagecontrol [disabled]="this.setValueServiceDisbled">
@@ -278,7 +278,7 @@
                                             </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                <div class="col-xl-1 col-lg-1 col-md-1 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0" >
                                         <mat-label>GSTAmount</mat-label>
                                         <input matInput name="GSTAmount" type="number" min="0" [(ngModel)]="Service.GSTAmount" (blur)="calculateSevice('GSTAmount', 'chgst1')" required #GSTAmountcontrol [disabled]="this.setValueServiceDisbled">
@@ -287,7 +287,7 @@
                                             </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div *ngIf="Service.GSTPercentage === 0" class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 p-0">
+                                <div *ngIf="Service.GSTPercentage === 0" class="col-xl-1 col-lg-1 col-md-1 col-6 mb-0 p-md-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>GST Type</mat-label>
                                         <mat-select name="GSTType" [(ngModel)]="Service.GSTType" (blur)="calculateSevice('Total', 'chtotal1')" required #GSTTypecontrol1 [disabled]="this.setValueServiceDisbled">
@@ -295,7 +295,7 @@
                                         </mat-select>
                                     </mat-form-field>
                                 </div>
-                                <div *ngIf="Service.GSTPercentage !== 0" class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 p-0">
+                                <div *ngIf="Service.GSTPercentage !== 0" class="col-xl-1 col-lg-1 col-md-1 col-6 mb-0 p-md-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>GST Type</mat-label>
                                         <mat-select name="GSTType" [(ngModel)]="Service.GSTType" (blur)="calculateSevice('Total', 'chtotal1')" required #GSTTypecontrol1 [disabled]="this.setValueServiceDisbled">
@@ -303,7 +303,7 @@
                                         </mat-select>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                <div class="col-xl-1 col-lg-1 col-md-1 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0" >
                                         <mat-label>Total </mat-label>
                                         <input matInput name="Total" type="number" min="0"
@@ -314,12 +314,12 @@
                                             </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0" *ngIf="!showAddService">
+                                <div class="col-xl-1 col-lg-1 col-md-1 col-6 mb-0" *ngIf="!showAddService">
                                    <button *ngIf="addServiceManagement" type="button" autofocus mat-raised-button color="primary" (click)="showAddService = !showAddService; serviceresetData();">
                                      Add
                                    </button>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-2 mb-0" *ngIf="showAddService">
+                                <div class="col-xl-1 col-lg-1 col-md-1 col-6 mb-0" *ngIf="showAddService">
                                     <button type="button" [disabled]="!f2.valid " autofocus mat-raised-button color="primary" (click)="showAddService = !showAddService; servicesave(); ">
                                         save
                                     </button>
